--- a/frontend/src/app/libs/login/login.component.html
+++ b/frontend/src/app/libs/login/login.component.html
@@ -30,6 +30,6 @@
       </div>
       <button type="submit">Login</button>
     </form>
-    <button (click)="loginByGithub">Login by Github</button>
+    <button (click)="loginByGithub()">Login by Github</button>
   </div>
 </div>
