--- a/frontend/src/app/libs/sign-in/sign-in.component.html
+++ b/frontend/src/app/libs/sign-in/sign-in.component.html
@@ -1,15 +1,22 @@
-<form [formGroup]="signIn">
-
-  <label>
-    Email
-    <input type="email" formControlName="email" required autofocus>
-  </label>
-
-  <label>
-    Password
-    <input type="password" formControlName="password" required>
-  </label>
-
-  <button [disabled]="!signIn.valid" (click)="submit()">Sign in</button>
-
+<form class="app--signin-page--form" [formGroup]="signinForm">
+  <div class="app--signin-page--input-email">
+    <mat-form-field appearance="fill">
+      <mat-label>Enter your email</mat-label>
+      <input matInput placeholder="pat@example.com" type="email" formControlName="email">
+      <mat-error *ngIf="!signinForm.valid">{{getErrorMessage()}}</mat-error>
+    </mat-form-field>
+  </div>
+  <div class="app--signin-page--input-password">
+    <mat-form-field appearance="fill">
+      <mat-label>Enter your password</mat-label>
+      <input matInput [type]="hide ? 'password' : 'text'" formControlName="password" autocomplete="on">
+      <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
+        [attr.aria-pressed]="hide">
+        <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+      </button>
+    </mat-form-field>
+  </div>
+  <div class="app--signin-page--input-password">
+    <button mat-button [disabled]="!signinForm.valid" (click)="submit()">Sign in</button>
+  </div>
 </form>
