refactor(gandalf/frontend): ref observable naming

--- a/frontend/src/app/libs/auth-page/auth-page.component.html
+++ b/frontend/src/app/libs/auth-page/auth-page.component.html
@@ -34,4 +34,4 @@
   <button mat-raised-button [disabled]="isLoading" (click)="signInByGithub()">Sign in by GitHub</button>
 </div>
 
-<mat-error>{{ authError | async }}</mat-error>
+<mat-error>{{ authError$ | async }}</mat-error>
