--- a/frontend/src/app/libs/landing/components/events/events.component.scss
+++ b/frontend/src/app/libs/landing/components/events/events.component.scss
@@ -4,7 +4,7 @@
 	flex-wrap: wrap;
 	margin: 5px 5px 5px 5px;
 
-	&--event {
+	&--item {
 		display: flex;
 		flex: 1 1 32%;
 		justify-content: center;
@@ -13,7 +13,7 @@
 		margin: 5px 5px 5px 5px;
 		background-color: #c4c4c4;
 
-		&--title {
+		&--text-title {
 			font-weight: 500;
 			font-size: 60px;
 			line-height: 120%;
