--- a/frontend/src/app/libs/user-profile-page/user-profile-page.component.scss
+++ b/frontend/src/app/libs/user-profile-page/user-profile-page.component.scss
@@ -1,9 +1,9 @@
-.user-profile-input {
-    margin: 10px;
-    input {
-        margin: 5px;
-    }
-}
+//.user-profile-input {
+//    margin: 10px;
+//    input {
+//        margin: 5px;
+//    }
+//}
 
 .buttons {
     display: flex;
