--- a/frontend/src/app/libs/landing/components/event/event.component.scss
+++ b/frontend/src/app/libs/landing/components/event/event.component.scss
@@ -1,8 +1,25 @@
 .app-event {
-	font-weight: 500;
-	font-size: 60px;
-	line-height: 120%;
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: space-around;
+	align-items: center;
+	width: 100%;
 	letter-spacing: 1.25px;
-	text-transform: capitalize;
 	color: #000000;
+
+	&-title {
+		font-weight: 500;
+		font-size: 60px;
+		line-height: 120%;
+		text-transform: capitalize;
+	}
+
+	&-date,
+	&-time {
+		font-style: normal;
+		font-weight: normal;
+		font-size: 16px;
+		line-height: 16px;
+	}
 }
