--- a/frontend/src/app/libs/user-profile-page/user-profile-page.component.html
+++ b/frontend/src/app/libs/user-profile-page/user-profile-page.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="profileForm" (ngSubmit)="updateUserInfo()">
+<form [formGroup]="profileForm">
     <div>
         <mat-form-field appearance="fill">
             <mat-label>Email</mat-label>
