feat: add tile menu

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -369,31 +369,26 @@
   </div>
   <button mat-button>Magic Button Here</button>
  
-	<div class="app-components-test-container" style="width: 380px;">
+	<!--Element for testing-->
+	<div class="app-components-test-container" style="width: 400px;">
 		<app-event-tile
 			[isDraft]="true"
-			[name]="'Educational Codeforces Round'"
-			[startDate]="2016-04-24"
-			[endDate]="2020-04-24"
-			[statusList]="['Admin', 'Mentor', 'Eve.manager', 'HR', 'Participant']"
+			[name]="'Super classic training'"
+			[statusList]="['Admin', 'Manager', 'Eve.manager']"
 		></app-event-tile>
 		<app-event-tile
 			[isDraft]="false"
-			[name]="'Super classic training'"
-			[startDate]="2016-04-24"
-			[endDate]="2020-04-24"
-			[statusList]="['Admin', 'Manager', 'Eve.manager']"
+			[name]="'Educational Codeforces Round'"
+			[statusList]="['Admin', 'Mentor', 'Eve.manager', 'HR', 'Participant']"
 		></app-event-tile>
 		<app-event-tile
 			[isDraft]="true"
 			[name]="'EDU: Segment tree'"
-			[startDate]="2016-04-24"
 			[statusList]="['Admin', 'Manager', 'Eve.manager']"
 		></app-event-tile>
 		<app-event-tile
 			[isDraft]="false"
 			[name]="'Super mega ultra training with the huge title OMG'"
-			[startDate]="2016-04-24"
 			[statusList]="['Admin', 'Manager', 'Eve.manager']"
 		></app-event-tile>
 	</div>
